--- a/Todo
+++ b/Todo
@@ -2,29 +2,27 @@ SIM
 
     Main:
 	
-	create main class
-	convert grid to SW origin 
+	create main class--DONE
+	convert grid to SW origin   
 	
-	
-	
-	Async test/experiment
-	
-	
-	
-	
-	
+
 	Classupdates:
+		Grid:
+			Colors
 	
-	
-		Rocket
+		Rocket:
 		
-		Control
-			w/s = thrust
-			a/d = rudder angle
-			
-			animate angle
-			
-			animate thrust
+			Control
+				w/s = thrust --DONE
+				a/d = rudder angle --DONE
+				
+				animate angle
+				
+				animate thrust
 		
 		Environ
 	
+			references:
+				ground
+				clouds
+				
